--- a/home/user/templates/index.html
+++ b/home/user/templates/index.html
@@ -1,117 +1,138 @@
 <style type="text/css">
-	*{font-family:"Microsoft YaHei","黑体","宋体";}
-	li{cursor:pointer;}
-	.redactbtn{border-color:#bbb;}
-	.enable,.sub-set-title ul li a{font-size:14px;}
-	.serch_middle_div{height:35px;padding:5px;}
-	.page-list{margin-top:15px;float: right;margin-right:20px;}
-	.page-list a,.page-list span{margin-right:5px;}
-	
-	.kfTypeDiv span{cursor:pointer;}
-	.kfSpan{color:#ccc;}
-	.isKf{color:#428bca;}
+.redactbtn{border-color:#bbb;}
+.enable,.sub-set-title ul li a{font-size:14px;}
+.serch_middle_div{height:35px;padding:5px;}
+.page-list{margin-top:15px;float: right;margin-right:20px;}
+.page-list a,.page-list span{margin-right:5px;}
+
+.kfTypeDiv span{cursor:pointer;}
+.kfSpan{color:#ccc;}
+.isKf{color:#428bca;}
+
+.replyDiv{position:fixed;z-index:1999;width:1200px;padding:1px;top:0;display:none;}
+.replyBox{border:1px solid #BCE1B4;width:250px;height:140px;margin:0 auto;background-color:#fff;border-radius:5px;}
+.replyBox h3{background-color:#5CB85C;color:#fff;margin:0;font-size:16px;height:30px;line-height:30px;}
+.replyBox div{margin:10px;}
+.replyBox textarea{width:230px;height:60px;border-radius:5px;}
+.replyBox input[type='button']{padding:3px 10px;font-family:"Microsoft YaHei","黑体","宋体";}
+.replyBox b{display:block;float:right;cursor:pointer;}
 </style>
 <div class="main-content">
-	<div class='inner'>
-		<div class="manage-apply">
-			<div class="apply-content">
-				<div class="manage-menu">
-					<div class='serch_middle_div'>
+<div class='inner'>
+<div class="manage-apply">
+<div class="apply-content">
+<div class="manage-menu">
+	<div class='serch_middle_div'>
+		<{if $smarty.get.type==1}>
+		<span style='float:left;line-height:35px;font-weight:bold;'>个人用户人数：<{$countnum}></span>
+		<{else}>
+		<span style='float:left;line-height:35px;font-weight:bold;'>企业用户人数：<{$countnum}></span>
+		<{/if}>
+		<!-- <div>
+			<button style="float:right;" onclick="javascript:location.href='/home/news/index.php?a=add'">发布资讯</button>
+		</div> -->
+		<div class="pull-right" style="margin-right:8px">
+			<form method="get" action="">
+				<input type="hidden" name="type" value="<{$smarty.get.type}>" />
+				<input type="hidden" name="admin" value="<{$smarty.get.admin}>" />
+				<input name="nicheng" class="keywords" placeholder="输入昵称" type="text" value="<{$smarty.get.nicheng}>">&nbsp;&nbsp;
+				<input name="keywords" class="keywords" placeholder="输入名称" type="text" value="<{$smarty.get.keywords}>">&nbsp;&nbsp;
+				<input value="搜索" id="search" class="" title="搜索" type="submit">
+			</form>
+		</div>
+	</div>
+	<div class="list-table">
+		<div class="wrapper" style="width:100%;">
+			<table style="table-layout:auto;" class="stable">
+				<thead>
+					<tr>
 						<{if $smarty.get.type==1}>
-						<span style='float:left;line-height:35px;font-weight:bold;'>个人用户人数：<{$countnum}></span>
+						<th name="Theme" class="hover enable">头像</th>
+						<th name="Theme" class="hover enable">手机账号</th>
+						<th name="Theme" class="hover enable">真实姓名</th>
+						<th name="Theme" class="hover enable">昵称</th>
+						<th name="Theme" class="hover enable">性别</th>
+						<th name="Theme" class="hover enable">设置为客服</th>
+						<th name="Theme" class="hover enable">余额(元)</th>
+						<th name="Theme" class="hover enable">向该用户</th>
+						<{if $smarty.get.admin==1}><th name="Theme" class="hover enable">充值</th><{/if}>
 						<{else}>
-						<span style='float:left;line-height:35px;font-weight:bold;'>企业用户人数：<{$countnum}></span>
+						<th name="Theme" class="hover enable">手机账号</th>
+						<th name="Theme" class="hover enable">公司名称</th>
+						<th name="Theme" class="hover enable">联系人</th>
 						<{/if}>
-						<!-- <div>
-							<button style="float:right;" onclick="javascript:location.href='/home/news/index.php?a=add'">发布资讯</button>
-						</div> -->
-						<div class="pull-right" style="margin-right:8px">
-							<form method="get" action="">
-								<input type="hidden" name="type" value="<{$smarty.get.type}>" />
-								<input type="hidden" name="admin" value="<{$smarty.get.admin}>" />
-								<input name="nicheng" class="keywords" placeholder="输入昵称" type="text" value="<{$smarty.get.nicheng}>">&nbsp;&nbsp;
-								<input name="keywords" class="keywords" placeholder="输入名称" type="text" value="<{$smarty.get.keywords}>">&nbsp;&nbsp;
-								<input value="搜索" id="search" class="" title="搜索" type="submit">
-							</form>
-						</div>
-					</div>
-					<div class="list-table">
-						<div class="wrapper" style="width:100%;">
-							<table style="table-layout:auto;" class="stable">
-								<thead>
-									<tr>
-										<{if $smarty.get.type==1}>
-										<th name="Theme" class="hover enable">头像</th>
-										<th name="Theme" class="hover enable">手机账号</th>
-										<th name="Theme" class="hover enable">真实姓名</th>
-										<th name="Theme" class="hover enable">昵称</th>
-										<th name="Theme" class="hover enable">性别</th>
-										<th name="Theme" class="hover enable">设置为客服</th>
-										<th name="Theme" class="hover enable">余额(元)</th>
-										<{if $smarty.get.admin==1}><th name="Theme" class="hover enable">充值</th><{/if}>
-										<{else}>
-										<th name="Theme" class="hover enable">手机账号</th>
-										<th name="Theme" class="hover enable">公司名称</th>
-										<th name="Theme" class="hover enable">联系人</th>
-										<{/if}>
-										<th name="Operate" class="hover enable">操作</th>
-									</tr>
-								</thead>
-								<tbody class='postTbody'>
-									<!------------列表开始------------>
-									<{foreach from=$list item="v"}>
-									<tr>
-										<{if $smarty.get.type==1}>
-										<td><div>
-											<{if $v.headPic}>
-												<img src="<{$v.headPic}>" height="50" />
-											<{/if}>
-										</div></td>
-										<td><div><{$v.username}></div></td>
-										<td><div><{$v.nickname}></div></td>
-										<td><div><{$v.nicheng}></div></td>
-										<td><div><{if $v.sex==1}>男<{else}>女<{/if}></div></td>
-										<td><div class="kfTypeDiv">
-											<span class="kfSpan <{if $v.type==3}>isKf<{/if}>" data-status='3' data-id='<{$v.id}>'>是</span> | 
-											<span class="kfSpan <{if $v.type==1}>isKf<{/if}>" data-status='1' data-id='<{$v.id}>'>否</span>
-										</div></td>
-										<td><div><{$v.money}></div></td>
-										<{if $smarty.get.admin==1}><td><a href="index.php?a=cz&id=<{$v.id}>">充值</a></td><{/if}>
-										<{else}>
-										<td><div><{$v.username}></div></td>
-										<td><div><{$v.nickname}></div></td>
-										<td><div><{$v.contact_name}></div></td>
-										<{/if}>
-										<td>
-											<div class="btn-operate">
-											<{if $smarty.get.type==1}>
-											<a href="index.php?a=detail&id=<{$v.id}>" class="redactbtn">详细信息</a> | 
-											<{else}>
-											<a href="index.php?a=detail_company&id=<{$v.id}>" class="redactbtn">详细信息</a> | 
-											<{/if}>
-											<a href="#" onclick="delRow(event,'<{$v.id}>')" class="redactbtn">删除</a>
-											</div>
-										</td>
-									</tr>
-									<{/foreach}>
-									<!------------列表结束------------>
-								</tbody>
-							</table>
-							<{if $page}><div class="page-list" style="margin-top:15px;float: right;margin-right:20px;"><{$page}></div><{/if}>
-						</div>
-					</div>
-				</div>
-			</div>
+						<th name="Operate" class="hover enable">操作</th>
+					</tr>
+				</thead>
+				<tbody class='postTbody'>
+					<!------------列表开始------------>
+					<{foreach from=$list item="v"}>
+					<tr>
+						<{if $smarty.get.type==1}>
+						<td><div>
+							<{if $v.headPic}>
+								<img src="<{$v.headPic}>" height="50" />
+							<{/if}>
+						</div></td>
+						<td><div><{$v.username}></div></td>
+						<td><div><{$v.nickname}></div></td>
+						<td><div><{$v.nicheng}></div></td>
+						<td><div><{if $v.sex==1}>男<{else}>女<{/if}></div></td>
+						<td><div class="kfTypeDiv">
+							<span class="kfSpan <{if $v.type==3}>isKf<{/if}>" data-status='3' data-id='<{$v.id}>'>是</span> | 
+							<span class="kfSpan <{if $v.type==1}>isKf<{/if}>" data-status='1' data-id='<{$v.id}>'>否</span>
+						</div></td>
+						<td><div><{$v.money}></div></td>
+						<td><div><a href="javascript:void(0);" onclick="sendMsg(this,<{$v.id}>)" data-name="<{$v.nickname}>">发消息</a></div></td>
+						<{if $smarty.get.admin==1}><td><a href="index.php?a=cz&id=<{$v.id}>">充值</a></td><{/if}>
+						<{else}>
+						<td><div><{$v.username}></div></td>
+						<td><div><{$v.nickname}></div></td>
+						<td><div><{$v.contact_name}></div></td>
+						<{/if}>
+						<td>
+							<div class="btn-operate">
+							<{if $smarty.get.type==1}>
+							<a href="index.php?a=detail&id=<{$v.id}>" class="redactbtn">详细信息</a> | 
+							<{else}>
+							<a href="index.php?a=detail_company&id=<{$v.id}>" class="redactbtn">详细信息</a> | 
+							<{/if}>
+							<a href="#" onclick="delRow(event,'<{$v.id}>')" class="redactbtn">删除</a>
+							</div>
+						</td>
+					</tr>
+					<{/foreach}>
+					<!------------列表结束------------>
+				</tbody>
+			</table>
+			<{if $page}><div class="page-list" style="margin-top:15px;float: right;margin-right:20px;"><{$page}></div><{/if}>
+		</div>
+	</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<!-- loading动画开始 -->
+<div id="loading" style="position:fixed;z-index:881213;display:none;width:100%;height:100px;top:0;filter:alpha(opacity=70);opacity:0.7;background-color:#999;"><img src="../public/img/loading.gif" style="display:block;margin:200px 550px;" /></div>
+<!-- loading动画结束 -->
+<!-- 回复框 -->
+<div class="replyDiv">
+	<div class='replyBox'>
+		<h3>
+			&nbsp;回复<span>陈冰</span>
+			<b onclick="$('.replyDiv').hide();">×&nbsp;</b>
+		</h3>
+		<div>
+			<input type="hidden" name="talk_id" id="talk_id" value="" />
+			<textarea name="" id="replyContent"></textarea><br />
+			<input type="button" class="btn btn-large btn-success" onclick="submitMsg()" value="发送" />
 		</div>
 	</div>
 </div>
 <script type="text/javascript">
 set_title_name('用户管理');
-<{if $smarty.get.type==1}>
-set_menu_cur('menu_31', 'cur');
-<{else}>
-set_menu_cur('menu_32', 'cur omega');
-<{/if}>
+set_menu_cur('menu_3<{$smarty.get.type}>', 'cur');
 function delRow(event,id){
 	if(confirm("确定要删除此信息吗?")){
 		$.ajax({
@@ -132,6 +153,10 @@ function delRow(event,id){
 	}
 }
 $(document).ready(function(){
+	var bodyWidth = document.documentElement.clientWidth;
+	var bodyHeight = document.documentElement.clientHeight;
+	$('#loading').css({height:bodyHeight+'px'});
+	
 	$('.kfTypeDiv span').click(function(){
 		if(confirm('确定要执行此操作吗？')){
 			var kf_type=$(this).attr('data-status');
@@ -144,4 +169,25 @@ $(document).ready(function(){
 		}
 	})
 })
+//对单个用户发消息
+function sendMsg(obj,id){
+	var manname=$(obj).attr('data-name');
+	$('.replyBox span').text(manname);
+	$('#talk_id').val(id);
+	$('.replyDiv').slideDown();
+}
+function submitMsg(){
+	var replyContent=$('#replyContent').val();
+	if(replyContent==''){
+		alert('消息不能为空');return;
+	}
+	var talk_id=$('#talk_id').val();
+	$('#loading').show();
+	$.post('index.php',{a:'send_msg',id:talk_id,content:replyContent},function(){
+		$('#loading').hide();
+		alert('发送成功');
+		$('.replyDiv').slideUp();
+		$('#replyContent').val('');
+	});
+}
 </script>
