Signed-off-by: hanbing <hanbing@qq.com>

--- a/mobile/templates/no_data.html
+++ b/mobile/templates/no_data.html
@@ -23,7 +23,7 @@
 <div class="main">  
 	<div class="history">
 		<div class="item_list" style="font-size:20px;text-align:center;padding-top:20px;padding-bottom:20px;color:#ff9c00;">
-			暂无数据
+			<{$info|default:'暂无数据'}>
 		</div>
 	</div>
 </div>
