--- a/home/user/templates/detail.html
+++ b/home/user/templates/detail.html
@@ -93,6 +93,16 @@
 											<input type="radio" name="info[is_v]" id="optionsRadios1" value="1" <{if $vo.is_v==1}>checked<{/if}> > <label for="optionsRadios1">是</label>
 										</div>
 									</div>
+									<div class="shop_sort">
+										<div class="shop_sort_title">
+											<h4>审核通过：</h4>
+										</div>
+										<div class="shop_sort_set" style="margin:10px;color:#4E5359;">
+											<input type="radio" name="info[is_see]" value="0" <{if $vo.is_see==0}>checked<{/if}> > 
+											<label>否&nbsp;&nbsp;</label>
+											<input type="radio" name="info[is_see]" value="1" <{if $vo.is_see==1}>checked<{/if}> > <label>是</label>
+										</div>
+									</div>
 									<div class="shop_sort" style="margin-top:10px;">
 										<div class="shop_sort_title">
 											<h4></h4>
