Signed-off-by: hanbing <hanbing@qq.com>

--- a/home/public/templates/main_menu.html
+++ b/home/public/templates/main_menu.html
@@ -65,10 +65,10 @@
 		</li>
 		<li>
 			<a href="javascript:void(0)" onclick="return false;"><i class="icons icons-display"></i>金额管理</a>
-			<ul style="display:none;">
+			<!-- <ul style="display:none;">
 				<li id="menu_91"><a href="/home/tx/index.php">提现管理</a></li>
 				<li id="menu_92"><a href="/home/tx/moneylog.php">金额日志</a></li>
-			</ul>
+			</ul> -->
 		</li>
 		<li>
 			<a href="javascript:void(0)" onclick="return false;"><i class="icons icons-data"></i>评论管理</a>
