--- a/home/public/templates/layout1.html
+++ b/home/public/templates/layout1.html
@@ -6,7 +6,6 @@
 <link rel="stylesheet" type="text/css" href="<{$WEB_DOMAIN}>/home/public/css/default.css" />
 <style type="text/css">
 	*,input,textarea,button{font-family:"Microsoft YaHei","微软雅黑",STXihei,"华文细黑",serif;}
-	.main-content{padding-left:0;}
 </style>
 <script type='text/javascript' src='<{$WEB_DOMAIN}>/home/public/js/jquery-1.11.0.min.js'></script>
 <script type='text/javascript' src='<{$WEB_DOMAIN}>/home/public/js/common.js'></script>
@@ -14,7 +13,12 @@
 </head>
 <body>
     <div class="main-container clearfix">
+		<{include file="$ROOT_PATH/home/public/templates/main_menu.html"}>
         <{include file="$ROOT_PATH/home/$_TPL_"}>
+		<div class="clearfix"></div>
+        <footer class="main-footer">
+		Copyright &copy; 2013-2015 All Rights Reserved. <!-- 苏ICP备09098830号 Tel：0512-65965129 Fax:0512-65924988 Email:service@yunfanke.com -->
+		</footer>
     </div>
 	<script type='text/javascript'>
 	(function(){
