--- a/home/reply/templates/talk_index.html
+++ b/home/reply/templates/talk_index.html
@@ -41,6 +41,7 @@
 								<thead>
 									<tr>
 										<th name="Sort" class="enable">说话人@接收人</th>
+										<th class="enable">评论人(姓名-电话)</th>
 										<{if $smarty.get.typenum==1}>
 										<th name="Name" class="enable" style='width:200px'>职位标题</th>
 										<{/if}>
@@ -55,6 +56,7 @@
 										<td><div><{$v.name}>
 										<{if $v.tomanname}> @ <{$v.tomanname}><{/if}>
 										</div></td>
+										<td><div><{$v.faburen}></div></td>
 										<{if $smarty.get.typenum==1}>
 										<td style='white-space:normal;width:200px'><div><{$v.title}></div></td>
 										<{/if}>
