--- a/mobile/templates/user_index_personal.html
+++ b/mobile/templates/user_index_personal.html
@@ -79,7 +79,7 @@
 			</li>
 			</a>
 			<{/if}>
-			<a href="index.php?m=job&a=index&user=1">
+			<a href="index.php?m=job&a=index_user">
 			<li>
 				<div class="list_info">任务管理</div>
 				<div class="next"><span class="fa fa-chevron-right" ></span></div>
