--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ html, body {
   background: #fff;
 }
 a,img{border:0;}
+.clear{clear:both;}
 .header{height:60px;width:100%;background:#362e2b;}
 .yfk_logo{display:block;margin:0;padding:0;float:left;margin:7.5px 5px 0 0;}
 .header >div {
@@ -49,6 +50,10 @@ a,img{border:0;}
 }
 .header a.QQ {
   background-position: 0 -14px;
+}
+.header a.pic {
+  background-position: -60px -14px;
+  width:43px!important;
 }
 .header a.Wechat {
   background-position: -30px -14px;
@@ -129,3 +134,14 @@ padding-top:35px;
 .flex-direction-nav li a{display:block;width:66px;height:66px;overflow:hidden;cursor:pointer;position:absolute;}
 .flex-direction-nav li a.flex-prev{left:40px;background:url(../images/prev.png) center center no-repeat;}
 .flex-direction-nav li a.flex-next{right:40px;background:url(../images/next.png) center center no-repeat;}
+/*照片展示*/
+.show_container{width:100%;height:650px;background:url(../images/show_bg.png) no-repeat center bottom #080c18;}
+.container{width:1200px;margin:0 auto;padding:30px 0;}
+.team{float:left;width:420px;}
+.team .title img{display:block;margin:0 0 15px 0;padding:0;}
+.team .tips img{display:block;margin-top:30px;padding:0;}
+.member{float:left;width:780px;}
+.member .title img{display:block;margin:0 0 15px 0;padding:0;}
+.pic_group{display:block;margin:0;padding:0;list-style-type:none;}
+.pic_group li{list-style-type:none;margin-right:15px;float:left;margin-bottom:15px;}
+.pic_group li img{display:block;width:180px;height:116px;}
