--- a/home/task/templates/task_taskadd.html
+++ b/home/task/templates/task_taskadd.html
@@ -198,6 +198,16 @@
 							</div>
 							<div class="shop_sort">
 								<div class="shop_sort_title">
+									<h4>是否客户结算</h4>
+								</div>
+								<div class="shop_sort_set" style="margin:10px;color:#4E5359;">
+									<label><input type="radio" name="info[is_kh]" value="0" <{if $vo.is_kh==0}>checked<{/if}> > 
+									否&nbsp;&nbsp;</label>
+									<label><input type="radio" name="info[is_kh]" value="1" <{if $vo.is_kh==1}>checked<{/if}> > 是</label>
+								</div>
+							</div>
+							<div class="shop_sort">
+								<div class="shop_sort_title">
 									<h4>是否紧急：</h4>
 								</div>
 								<div class="shop_sort_set" style="margin:10px;color:#4E5359;">
