--- a/home/task/templates/task_index.html
+++ b/home/task/templates/task_index.html
@@ -35,7 +35,7 @@
 							<table style="table-layout:auto;" class="stable">
 								<thead>
 									<tr>
-										<th class="enable">标题</th>
+										<th class="enable">标题-方式-工作时间</th>
 										<th class="enable">报名数</th>
 										<th class="enable">浏览量</th>
 										<th class="enable">是否关闭</th>
@@ -49,7 +49,7 @@
 									<!------------列表开始------------>
 									<{foreach from=$list item="v"}>
 									<tr data-bc='#fff'>
-										<td><div><{if $v.uid==1}>(平台)<{else}><span style='color:red'>(企业)</span><{/if}><{$v.title}>-<{if $v.pay_type==1}>现金<{else}><span style='color:red'>转账</span><{/if}></div></td>
+										<td><div><{if $v.uid==1}>(平台)<{else}><span style='color:red'>(企业)</span><{/if}><{$v.title}>-<{if $v.pay_type==1}>现金<{else}><span style='color:red'>转账</span><{/if}>-<{$v.work_time|truncate:10:''}></div></td>
 										<td><div><{$v.countnum}></div></td>
 										<td><div><{$v.see_num}></div></td>
 										<td><div class="kfTypeDiv">
