--- a/mobile/templates/yimiao_lp_day.html
+++ b/mobile/templates/yimiao_lp_day.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>任务详情</title>
+<title>领取记录</title>
 <meta content="application/xhtml+xml;charset=UTF-8" http-equiv="Content-Type">
 <meta content="no-cache,must-revalidate" http-equiv="Cache-Control">
 <meta content="no-cache" http-equiv="pragma">
@@ -22,66 +22,58 @@ select,input{color:#555;}
 .job_info .info_list p{float:none;color:#666;font-weight:normal;}
 .job_info .info_list span{display:inline;float:none;}
 
-.hpt_list{background-color:#fff;margin-top:10px;}
+.hpt_list{background-color:#fff;}
 .hpt_item{border-bottom:1px solid #ddd;}
 .hpt_name{padding:10px 0 0 8px;}
 .hpt_addr{padding:5px 0 8px 8px;}
 .hpt_addr span{font-size:13px;display:block;color:#666;}
-.lq_btn{font-size:16px;float:right;margin-top:5px;margin-right:10px;
+.lq_btn{font-size:14px;float:right;margin-top:5px;margin-right:10px;
 	background-color:#01B4EC;border-radius:3px;color:#fff;padding:1px 8px;}
 .hpt_addr b{font-weight:normal;color:#ff7101;}
 </style>
 <body style="background-color:#eeeeee;">
 <div class="main">  
 	<div class="job_detail">
-		<div class="item_list" style="padding:15px 0 10px 0;">
+		<div class="item_list" style="padding:8px 0;">
 			<div class="list_title">
-				<div class="job_title"><{$vo.title}></div>
+				<div class="job_title"><{$now_date}>领取记录</div>
+				<div style="clear:both;"></div>
 			</div>
 			<div class="clear" style="height:5px;"></div>
 		</div>
 	</div>
-	<div class="job_info">
-		<div class="info_list" style="color:#666;"><{$vo.content}></div>
-	</div>
 </div>
-<{if $userRow.id==1}>
-<div class="register_end" onclick="window.location.href='index.php?m=job&a=lp_day'">每日领取记录</div>
-<{else}>
-<div class="register_end" onclick="window.location.href='index.php?m=job&a=lp_history'">我的领取记录</div>
-<{/if}>
 <div class="hpt_list">
-	<{foreach from=$hptArr item='v'}>
-	<div class="hpt_item" <{if $v.lp_status==1}>style="background-color:#eee;"<{/if}> >
-		<div class="hpt_name"><{$v.name}>
-			<{if $v.lp_status==0}>
-			<div class="lq_btn" onclick="lq_fun(<{$v.id}>)">领取</div>
-			<{else}>
-			<div class="lq_btn" style="background-color:#bbb;">已领取</div>
-			<{/if}>
+	<{foreach from=$list item='v'}>
+	<div class="hpt_item">
+		<div class="hpt_name">
+			<a style="color:#46b0e0;"><{$v.hpt_name}>
+			<span class="lq_btn" onclick="del(<{$v.id}>)">删除</span>
+			</a>
 		</div>
 		<div class="hpt_addr">
-			<span><b>地址</b>: <{$v.address}></span>
-			<span style="margin-top:3px;"><b>服务时间</b>: <{$v.service_time}></span>
+			<span style="margin-top:3px;">
+				<b>领取人</b>: <{$v.nickname}>
+				&nbsp;&nbsp;&nbsp;<a href="tel:<{$v.username}>"><{$v.username}></a>
+				<{if $v.num==0}>
+				&nbsp;&nbsp;&nbsp;<b>未提报</b>
+				<{else}>
+				&nbsp;&nbsp;&nbsp;<b>提报人数</b>: <{$v.num}>
+				<{/if}>
+			</span>
 		</div>
 	</div>
 	<{/foreach}>
 </div>
 <{include file="footer.html"}>
 <script type="text/javascript">
-	function lq_fun(hpt_id){
-		$('#loading').show();
-		$.get('index.php?m=job&a=yimiao_lq&hpt_id='+hpt_id,function(res){
-			$('#loading').hide();
-			res=$.trim(res);
-			if(res=='suc'){
-				alert('“任务兼职密函”已发送至您的微信，请注意及时查收！');
-				window.location.href="index.php?m=job&a=index_user";
-			}else{
-				alert('每天只能领取一次任务');
-			}
+function del(id){
+	if(confirm('确定要删除吗？')){
+		$.get('index.php?m=job&a=del_yimiao_sign&id='+id,function(){
+			window.location.reload();
 		})
 	}
+}
 </script>
 </body>
 </html>
